@@ -1,0 +1,4 @@
+# for rsconnect (publishing to shinyapps.io)
+require(knitr)
+require(printr)
+require(DailyMeasure)
